; ModuleID = '/home/carl/AnghaBench/htop/extr_Action.c_Action_setSortKey.c'
source_filename = "/home/carl/AnghaBench/htop/extr_Action.c_Action_setSortKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@HTOP_REFRESH = common dso_local global i32 0, align 4
@HTOP_SAVE_SETTINGS = common dso_local global i32 0, align 4
@HTOP_UPDATE_PANELHDR = common dso_local global i32 0, align 4
@HTOP_KEEP_FOLLOWING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Action_setSortKey(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 2
  store i32 %5, i32* %7, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i32 0, i32* %11, align 4
  %12 = load i32, i32* @HTOP_REFRESH, align 4
  %13 = load i32, i32* @HTOP_SAVE_SETTINGS, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @HTOP_UPDATE_PANELHDR, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @HTOP_KEEP_FOLLOWING, align 4
  %18 = or i32 %16, %17
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
